crates/oxc_css_parser/tests/error/scss/at-rule/forward/show-invalid.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<number>`
  ┌─ show-invalid.scss:1:19
  │
1 │ @forward "a" show 1;
  │                   ^


